tests/paczka1/small_fuzzy/28583873.err
Error in line 11: 9ECKt2NPd A237 17,0
Error in line 13: 9ECKt2NPd A689 1,8
Error in line 7: UCPP9h2u9b A689 65,5
